microservices/configmap-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: mysql
        image: mysql:5.7.30
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: spring
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
