microservices/gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: myboutique.io
    http:
      paths:
      - path: /products
        backend:
          serviceName: product
          servicePort: 8080
      - path: /order
        backend:
          serviceName: order
          servicePort: 8080
      - path: /customer
        backend:
          serviceName: customer
          servicePort: 8080
